# meow_auth

./: .env  .gitignore  Cargo.toml  docker-compose.yml
migrations/: 20251229214335_hello_world.down.sql  20251229214335_hello_world.up.sql
settings/: development.toml
src/: global.rs  lib.rs  logging.rs  main.rs  settings.rs
src/cli/: mod.rs
src/cli/database/: down.rs  mod.rs  reset.rs  status.rs  up.rs
src/cli/settings/: generate.rs  mod.rs  update.rs
src/database/: ids.rs  mod.rs
src/database/models/: world.rs
src/http/: mod.rs
