[package]
name = "meow_auth"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
smart-default = "0.7.1"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
tower = "0.5.2"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
