[package]
name = "meow_auth"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["moonbeeper <moonbeeper@duck.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "belt"
path = "src/bin/belt.rs"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
clap = { version = "4.5.53", features = ["cargo", "derive"] }
color-print = "0.3.7"
config = "0.15.19"
human-panic = "2.0.4"
nu-ansi-term = "0.50.3"
serde = { version = "1.0.228", features = ["derive"] }
smart-default = "0.7.1"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
toml_edit = "0.24.0"
tower = "0.5.2"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
