[package]
name = "meow_auth"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["moonbeeper <moonbeeper@duck.com>"]
default-run = "meow_auth"

[lib]
path = "src/lib.rs"

[[bin]]
name = "belt"
path = "src/bin/belt.rs"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
clap = { version = "4.5.53", features = ["cargo", "derive"] }
color-print = "0.3.7"
config = "0.15.19"
console = "0.16.2"
dialoguer = { version = "0.12.0", default-features = false }
human-panic = "2.0.4"
nu-ansi-term = "0.50.3"
serde = { version = "1.0.228", features = ["derive"] }
smart-default = "0.7.1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
toml_edit = "0.24.0"
tower = "0.5.2"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
typed-builder = "0.23.2"
ulid = { version = "1.2.1", features = ["serde", "uuid"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.19.0", features = ["serde"] }

[features]
default = ["hack"]
hack = []